--- a/v3.0/DirectX 11/DirectX 11.vcxproj.filters
+++ b/v3.0/DirectX 11/DirectX 11.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Dx11_QuadTree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Dx11_Terrain2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dx11_Engine.h">
@@ -114,6 +117,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Dx11_QuadTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Dx11_Terrain2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
